<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:title="@string/pref_location_lable"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:summary="Enter the city name"
        android:dialogTitle="Enter your city name"
        android:defaultValue="@string/pref_location_default">
    </EditTextPreference>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->

    <ListPreference
        android:title="@string/pref_units_label"
        android:defaultValue="@string/pref_units_metric"
        android:key="@string/pref_units_key"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values" />

    <CheckBoxPreference
        android:title="@string/enable_notifications_label"
        android:key="@string/enable_notifications_key"
        android:defaultValue="@string/enable_notifications_default"
        android:summaryOff="@string/enable_notifications_false"
        android:summaryOn="@string/enable_notifications_true" />

</PreferenceScreen>
